--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="cn.wang.geek">
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +17,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"/>
+        <activity
+            android:name=".SecondActivity"
+            android:launchMode="singleTask"
+            android:process=":remote"
+            android:taskAffinity=".haha"/>
+        <activity
+            android:name=".ThirdActivity"
+            android:process="cn.wang.geek.remote"/>
     </application>
 
 </manifest>
